[project]
name = "studytrack"
version = "0.1.0"
description = "A command-line study log for tracking sessions, weekly progress, and course totals."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
study = "studytrack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
